# SeminarDataScience

./: .gitmodules
Paper/: references.bib
Paper/figures/: .gitignore  main.py  pyproject.toml
Paper/figures/data/: .gitignore  repro.csv
Repro/: .gitignore  main.py  pyproject.toml
Repro/core/: main.py  main_ucihar.py  model_GLIE.py  oppor_dataloader.py  oppor_dataloader_v2.py  oppor_prepro_dataloader.py  shar_GILE.py  shar_dataloader.py  shar_main.py  sliding_window.py  ucihar_GILE.py  ucihar_dataloader.py  utils.py
Repro/patches/: 0001-feat-added-initial-project-skeleton-and-baseline-tra.patch  0002-fix-prevent-GILE-training-objective-from-diverging-t.patch  0003-feat-added-aux-Classifiers-for-encoder-loss-calculat.patch  0004-feat-added-Feature-Engineering-to-oppor-dataloader.patch  0005-feat-added-dataloader-for-Preprocessed-author-datase.patch  0006-feat-replaced-dummy-networks-with-real-networks.patch  0007-Fix-separated-Elbo-and-Ie-loss.patch  0008-fix-changes-to-comply-to-author-codes-more-strictly.patch  0009-fix-Adapted-author-code-more-directly-to-the-actual-.patch  0010-feat-added-paper-true-dataloader.patch  0011-fix-optimizer-now-target-proper-model-parameters.patch  0012-fix-actually-works-now.patch  0013-chore-removed-unused-code.patch  0014-feat-added-dataloaders-for-2-more-datasets.patch  0015-feat-added-code-to-run-all-datasets.patch  0016-chore-cleanup.patch
