[project]
name = "repro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audioread==3.1.0",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "decorator==5.2.1",
    "filelock==3.20.1",
    "fsspec==2025.12.0",
    "h5py==3.15.1",
    "idna==3.11",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "lazy-loader==0.4",
    "librosa==0.11.0",
    "llvmlite==0.46.0",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "networkx==3.6.1",
    "numba==0.63.1",
    "numpy==2.3.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.1.0",
    "platformdirs==4.5.1",
    "pooch==1.8.2",
    "pycparser==2.23",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.5",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sounddevice==0.5.3",
    "soundfile==0.13.1",
    "soxr==1.0.0",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.2",
]
